--- a/_posts/2019-04-27-why.md
+++ b/_posts/2019-04-27-why.md
@@ -7,8 +7,10 @@ layout: post
 ---
 
 어쩌면 한번도 경험해보지 않은 사람들이 있을지도 모른다. 그런데 어쩌면 한번쯤은 겪어볼수도 있는 이야기이다.
+
 GitBook is an amazing frontend style to present and organize contents (such as book chapters
-and blogs) on Web. The typical to deploy GitBook at [Github Pages][1]
+and blogs) on Web. 
+The typical to deploy GitBook at [Github Pages][1]
 is building HTML files locally and then push to Github repository, usually to the `gh-pages`
 branch. However, it's quite annoying to repeat such workload and make it hard for people do
 version control via git for when there are generated HTML files to be staged in and out.
